Fix menu and add gradient to menu (which will help keep menu visible at the top when user scrolls down through pages)

--- a/src/components/routes/contact/_contact.scss
+++ b/src/components/routes/contact/_contact.scss
@@ -4,7 +4,7 @@
     .heading-h1 {
       margin-top: -70px;
     }
-    margin: 7rem 0 0 0px;
+    margin: 15rem 0 0 0px;
     //padding: 2em;
     .contact-flex-container {
       height: auto;
