--- a/src/components/routes/press/_press.scss
+++ b/src/components/routes/press/_press.scss
@@ -1,3 +1,3 @@
 .page-container {
-  margin: 7rem 0 0 0px;
+  margin: 15rem 0 0 0px;
 }
